# EidosUI

./: AGENTS.md  CONTRIBUTING.md  Justfile  PLAN.md  README.md  SUMMARY.md  faq.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  test_basic.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  general.md
.github/workflows/: ci.yml
docs/: README.md  about.md  api_extractor.py  api_renderer.py  app.py  getting-started.md  index.md  kitchen_sink.py  philosophy.md  plan.md  pyproject.toml  quick-start.md  railway.json  requirements.txt
docs/components/: chat.md
docs/concepts/: architecture.md  components.md  index.md  markdown-extensions.md  styled-tags.md  styling.md  theming.md
docs/plugins/: index.md  markdown-extension-guide.md  markdown.md
eidos/: __init__.py  styles.py  tags.py  utils.py
eidos/components/: __init__.py  chat.py  feedback.py  headers.py  navigation.py  table.py  tabs.py  theme.py  typography.py
eidos/core/: __init__.py  helpers.py  styles.py  themes.py  utils.py
eidos/css/: styles.css
eidos/js/: chat.js  eidos.js
eidos/static/: eidos-styles.css  eidos-ui.js
examples/: README.md  basic_example.py  chat_example.py  example_markdown.md  forms_example.py  kitchen_sink.py  simple_app.py  simple_forms_example.py  test_minimal.py
examples/customization/: custom_theme.css  extreme_style_customization.py
examples/markdown_extension/: custom_styles.css  markdown_extension.py  sample_content.md
scripts/: validate_uv.py
tests/: __init__.py  conftest.py  test_imports.py  test_styles.py
(+9 files in other folders)
